syntax = "proto3";

package ai.floedb.metacat.planning;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.planning.rpc";
option java_outer_classname = "PlanStoreProto";

import "common/common.proto";
import "planning/planning.proto";

service PlanStore {
  rpc GetPlanBundle(GetPlanBundleRequest) returns (GetPlanBundleResponse);
}

message GetPlanBundleRequest {
  ai.floedb.metacat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
}

message GetPlanBundleResponse {
  repeated PlanFile data_files = 1;
  repeated PlanFile delete_files = 2;
}
